[Add] - Insert button for save in twitter.com. But dont send yes to the server

--- a/src/views/options.jade
+++ b/src/views/options.jade
@@ -22,10 +22,10 @@ html(lang='ja')
           .masthead.clearfix
             .inner
               h3.masthead-brand Save to Kawpaa
-              nav
-                ul.nav.masthead-nav
-                  li.active
-                    a(href='#') Home
+              //- nav
+              //-   ul.nav.masthead-nav
+              //-     li.active
+              //-       a(href='#') Home
           .inner.cover
 
             form.form-horizontal
@@ -33,25 +33,4 @@ html(lang='ja')
                 label.col-sm-2.control-label(for='token') Token
                 .col-sm-10
                   input#token.form-control(type='text', placeholder='token を入力してください')
-              //- .form-group
-              //-   .col-sm-offset-2.col-sm-10
-              //-     .checkbox
-              //-       label
-              //-         input(type='checkbox')
-              //-         | Remember me
-              //- .form-group
-              //-   .col-sm-offset-2.col-sm-10
-              //-     button.btn.btn-default(type='button') 登録
-
-
-            //- h1.cover-heading オプションページ
-            //- input#token.form-control(type='text', placeholder='token を入力してください')
             #console
-            //- p.lead
-            //-   a.btn.btn-lg.btn-default(href='#') 登録
-
-
-    //- .container
-    //-   input#token.form-control(type='text', placeholder='token を入力してください')
-    //-   #console
-    // /container
