--- a/src/views/options.jade
+++ b/src/views/options.jade
@@ -13,6 +13,7 @@ html(lang='ja')
 
     //- link(href='../../css/app.css', rel='stylesheet')
     script(src='../../js/vendors/lib.js')
+    script(src='../../js/vendors/options.lib.js')
     script(src='../../js/app.js')
 
   body
