[Change] - 関数のリネーム、読み込むライブラリファイルの変更

--- a/src/views/options.jade
+++ b/src/views/options.jade
@@ -8,7 +8,7 @@ html(lang='ja')
     title 設定画面
 
     // Bootstrap core CSS
-    link(href='../../css/vendors/lib.css', rel='stylesheet')
+    link(href='../../css/vendors/options.lib.css', rel='stylesheet')
     link(href='../../css/app.css', rel='stylesheet')
 
     //- link(href='../../css/app.css', rel='stylesheet')
