[Delete] - pixivのアカウント情報を入力するフォームは不要だったので削除

--- a/src/views/options.jade
+++ b/src/views/options.jade
@@ -29,10 +29,10 @@ html(lang='ja')
                 .col-sm-10
                   input#token.form-control(type='text', placeholder='token を入力してください')
 
-              .form-group
-                label.col-sm-2.control-label(for='pixiv') pixiv (任意)
-                .col-sm-5
-                  input#pixiv_username.form-control(type='text', placeholder='username')
-                .col-sm-5
-                  input#pixiv_password.form-control(type='password', placeholder='password')
+              //- .form-group
+              //-   label.col-sm-2.control-label(for='pixiv') pixiv (任意)
+              //-   .col-sm-5
+              //-     input#pixiv_username.form-control(type='text', placeholder='username')
+              //-   .col-sm-5
+              //-     input#pixiv_password.form-control(type='password', placeholder='password')
             #console
