[Rename] - app.css, app.jsは自明的でないのでoptions.css, options.jsに変更

--- a/src/views/options.jade
+++ b/src/views/options.jade
@@ -8,11 +8,11 @@ html(lang='ja')
     title 設定画面
 
     link(href='../../css/vendors/options.lib.css', rel='stylesheet')
-    link(href='../../css/app.css', rel='stylesheet')
+    link(href='../../css/options.css', rel='stylesheet')
 
     script(src='../../js/vendors/lib.js')
     script(src='../../js/vendors/options.lib.js')
-    script(src='../../js/app.js')
+    script(src='../../js/options.js')
 
   body
     .site-wrapper
