[Add] - links in option.html

--- a/src/views/options.jade
+++ b/src/views/options.jade
@@ -21,6 +21,13 @@ html(lang='ja')
           .masthead.clearfix
             .inner
               h3.masthead-brand Save to Kawpaa
+              nav
+                ul.nav.masthead-nav
+                  li
+                    a(href='https://kawpaa.eiurur.xyz') Kawpaa
+                  li
+                    a(href='https://github.com/eiurur/Save-to-Kawpaa') Github
+
           .inner.cover
             form.form-horizontal
               .form-group
