--- a/src/sass/options.scss
+++ b/src/sass/options.scss
@@ -6,20 +6,19 @@
 a,
 a:focus,
 a:hover {
-    color: #fff;
+  color: #fff;
 }
 
 /* Custom default button */
 .btn-default,
 .btn-default:hover,
 .btn-default:focus {
-    color: #333;
-    text-shadow: none;
- /* Prevent inheritence from `body` */
-    background-color: #fff;
-    border: 1px solid #fff;
+  color: #333;
+  text-shadow: none;
+  /* Prevent inheritence from `body` */
+  background-color: #fff;
+  border: 1px solid #fff;
 }
-
 
 /*
  * Base structure
@@ -27,119 +26,115 @@ a:hover {
 
 html,
 body {
-    height: 100%;
-    background-color: #333;
+  height: 100%;
+  background-color: #333;
 }
 
 body {
-    color: #fff;
-    text-align: center;
-    text-shadow: 0 1px 3px rgba(0,0,0,.5);
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
-    display: table;
-    width: 100%;
-    height: 100%;
- /* For at least Firefox */
-    min-height: 100%;
-    -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-    box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+  display: table;
+  width: 100%;
+  height: 100%;
+  /* For at least Firefox */
+  min-height: 100%;
+  -webkit-box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.5);
+  box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.5);
 }
 
 .site-wrapper-inner {
-    display: table-cell;
-    vertical-align: top;
+  display: table-cell;
+  vertical-align: top;
 }
 
 .cover-container {
-    margin-right: auto;
-    margin-left: auto;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 /* Padding for spacing */
 .inner {
-    padding: 30px;
+  padding: 30px;
 }
-
 
 /*
  * Header
  */
 .masthead-brand {
-    margin-top: 10px;
-    margin-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .masthead-nav > li {
-    display: inline-block;
+  display: inline-block;
 }
 
 .masthead-nav > li + li {
-    margin-left: 20px;
+  margin-left: 20px;
 }
 
 .masthead-nav > li > a {
-    padding-right: 0;
-    padding-left: 0;
-    font-size: 16px;
-    font-weight: bold;
-    color: #fff;
- /* IE8 proofing */
-    color: rgba(255,255,255,.75);
-    border-bottom: 2px solid transparent;
+  padding-right: 0;
+  padding-left: 0;
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff;
+  /* IE8 proofing */
+  color: rgba(255, 255, 255, 0.75);
+  border-bottom: 2px solid transparent;
 }
 
 .masthead-nav > li > a:hover,
 .masthead-nav > li > a:focus {
-    background-color: transparent;
-    border-bottom-color: #a9a9a9;
-    border-bottom-color: rgba(255,255,255,.25);
+  background-color: transparent;
+  border-bottom-color: #a9a9a9;
+  border-bottom-color: rgba(255, 255, 255, 0.25);
 }
 
 .masthead-nav > .active > a,
 .masthead-nav > .active > a:hover,
 .masthead-nav > .active > a:focus {
-    color: #fff;
-    border-bottom-color: #fff;
+  color: #fff;
+  border-bottom-color: #fff;
 }
 
 @media (min-width: 768px) {
-    .masthead-brand {
-        float: left;
-    }
+  .masthead-brand {
+    float: left;
+  }
 
-    .masthead-nav {
-        float: right;
-    }
+  .masthead-nav {
+    float: right;
+  }
 }
-
 
 /*
  * Cover
  */
 
 .cover {
-    padding: 0 20px;
+  padding: 0 20px;
 }
 
 .cover .btn-lg {
-    padding: 10px 20px;
-    font-weight: bold;
+  padding: 10px 20px;
+  font-weight: bold;
 }
-
 
 /*
  * Footer
  */
 
 .mastfoot {
-    color: #999;
- /* IE8 proofing */
-    color: rgba(255,255,255,.5);
+  color: #999;
+  /* IE8 proofing */
+  color: rgba(255, 255, 255, 0.5);
 }
-
 
 /*
  * Affix and center
@@ -147,32 +142,32 @@ body {
 
 @media (min-width: 768px) {
   /* Pull out the header and footer */
-    .masthead {
-        position: fixed;
-        top: 0;
-    }
+  .masthead {
+    position: fixed;
+    top: 0;
+  }
 
-    .mastfoot {
-        position: fixed;
-        bottom: 0;
-    }
+  .mastfoot {
+    position: fixed;
+    bottom: 0;
+  }
   /* Start the vertical centering */
-    .site-wrapper-inner {
-        vertical-align: middle;
-    }
+  .site-wrapper-inner {
+    vertical-align: middle;
+  }
   /* Handle the widths */
-    .masthead,
+  .masthead,
   .mastfoot,
   .cover-container {
-        width: 100%;
- /* Must be percentage or pixels for horizontal alignment */
-    }
+    width: 100%;
+    /* Must be percentage or pixels for horizontal alignment */
+  }
 }
 
 @media (min-width: 992px) {
-    .masthead,
+  .masthead,
   .mastfoot,
   .cover-container {
-        width: 700px;
-    }
+    width: 700px;
+  }
 }
