Remove Japanese message

--- a/src/views/options.pug
+++ b/src/views/options.pug
@@ -5,7 +5,7 @@ html(lang='ja')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(name='description', content='')
     meta(name='author', content='eiurur')
-    title 設定画面
+    title Setting
 
     link(href='../css/vendors/options.lib.min.css', rel='stylesheet')
     link(href='../css/options.min.css', rel='stylesheet')
@@ -32,6 +32,6 @@ html(lang='ja')
               .form-group.row
                 label.col-sm-2.col-form-label(for='token') Token
                 .col-sm-10
-                  input#token.form-control(type='text', placeholder='token を入力してください')
+                  input#token.form-control(type='text', placeholder='eg: 000000-xxxxxxxxxxxxxxxxxxxxx')
                       
             #console
